# lucy-rust-template

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT.md  cargo-generate.toml
.template/: Cargo.workspace.toml
.template/configs/: rustfmt.rhai
.template/hooks/: 01-license.rhai  02-layout.rhai  99-cleanup.rhai
.template/licenses/: LICENSE-0BSD.md  LICENSE-MIT.md
src/: lib.rs  main.rs
